[gd_scene load_steps=4 format=3 uid="uid://banpbbtj2yym7"]

[ext_resource type="Script" uid="uid://drlds8yx8bhmj" path="res://scripts/attack.gd" id="1_ehc6w"]
[ext_resource type="Texture2D" uid="uid://c25cyoy0q1giy" path="res://assets/icon.svg" id="2_iw7t5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j1uc"]
size = Vector2(32, 200)

[node name="attack" type="Area2D"]
script = ExtResource("1_ehc6w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6j1uc")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.275, 1.595)
texture = ExtResource("2_iw7t5")

[node name="die_time" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="die_time" to="." method="_on_die_time_timeout"]
